--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@
  * http://themefortress.com/reverie */
 
 @import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,400italic);
+@import url(http://fonts.googleapis.com/css?family=Vollkorn:400italic,400);
 
 // import normalize, stay at top
 // @import "normalize";
@@ -18,7 +20,8 @@
 // @import "foundation";
 
 // Load some Compass magic, note you will need to install Compass first
-@import "compass/css3/shared";
+//@import "compass/css3/shared"; //removed because throwing errors in prepros
+@import "compass/css3/deprecated-support"; //adding in place of shared to silence warnings
 @import "compass/css3/border-radius";
 @import "compass/css3/transition";
 @import "compass/css3/columns";
@@ -140,6 +143,7 @@ p{
 @import "activity-round2";
 @import "progress-circle";
 @import "old_activity";
+@import "activity-stream"; //this is for the finalized stream with filters on top
 
 .first{
 	padding-left:0;
